# FileLens

./: AGENTS.md  Cargo.toml  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  styles.css
frontend/src/components/atoms/Button/: Button.css  Button.tsx
frontend/src/components/atoms/Toggle/: Toggle.css  Toggle.tsx
frontend/src/components/layout/AppShell/: AppShell.css
frontend/src/components/layout/Section/: Section.css  Section.tsx
frontend/src/components/layout/Sheet/: Sheet.css  Sheet.tsx
frontend/src/components/molecules/DropZone/: DropZone.css  DropZone.tsx
frontend/src/components/molecules/MetaRow/: MetaRow.css  (+1 more)
frontend/src/types/: cleanup.ts  metadata.ts  ui.ts
frontend/src/utils/: metadata.ts
frontend/src/views/AnalyzeView/: AnalyzeView.css  AnalyzeView.tsx
frontend/src/views/CleanView/: CleanView.css  CleanView.tsx
frontend/src/views/LogsView/: LogsView.css  LogsView.tsx
scripts/: install.sh
src/: advanced_metadata.rs  app.rs  directory.rs  formatting.rs  lib.rs  main.rs  metadata.rs  metadata_editor.rs  search.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/advanced_metadata/: archive.rs  icc.rs  image.rs  media.rs  mod.rs  odf.rs  office.rs  pdf.rs  text.rs  xmp.rs
src/metadata/: export.rs  hashing.rs  mime.rs  mod.rs  output.rs  permissions.rs  renderer.rs  report.rs
src/metadata_editor/: constants.rs  directory_cleanup.rs  image.rs  menu.rs  mod.rs  modification.rs  removal.rs  tests.rs  utils.rs
src/metadata_editor/office/: archive.rs  clean.rs  edit.rs  mod.rs  sanitize.rs  verify.rs  xml.rs
(+12 files in other folders)
