[package]
name = "filelens"
version = "0.1.0"
edition = "2024"

description = "Herramienta CLI interactiva para visualizar metadata de archivos"
authors = ["FileLens Contributors"]
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
comfy-table = "7"
console = "0.15"
infer = "0.15"
indicatif = "0.17"
sha2 = "0.10"
users = "0.11"
walkdir = "2"
