[package]
name = "filelens"
version = "0.1.0"
edition = "2024"

description = "Motor de FileLens para analizar y sanear metadata de archivos"
authors = ["FileLens Contributors"]
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
csv = "1"
exif = { package = "kamadak-exif", version = "0.5" }
image = "0.25"
infer = "0.15"
lopdf = "0.34"
md-5 = "0.10"
png = "0.18"
rust_xlsxwriter = "0.66"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
users = "0.11"
walkdir = "2"
zip = "2"
xmltree = "0.10"

[workspace]
members = ["src-tauri"]
resolver = "2"

[dev-dependencies]
tempfile = "3"
